--- a/products/package.json
+++ b/products/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.990.0",
+    "@aws-sdk/client-sqs": "^3.993.0",
     "@aws-sdk/credential-providers": "^3.990.0",
     "@aws-sdk/s3-request-presigner": "^3.990.0",
     "dotenv": "^17.2.4",
