--- a/wallet-serverless/package.json
+++ b/wallet-serverless/package.json
@@ -1,6 +1,15 @@
 {
+  "name": "wallet-serverless",
+  "version": "1.0.0",
+  "description": "",
+  "main": "handler.js",
+  "scripts": {
+    "start": "node handler.js"
+  },
   "dependencies": {
-    "aws-sdk": "^2.1693.0",
-    "uuid": "^13.0.0"
-  }
+    "@aws-sdk/client-dynamodb": "^3.994.0",
+    "@aws-sdk/lib-dynamodb": "^3.994.0",
+    "uuid": "^8.3.2"
+  },
+  "license": "ISC"
 }
